--- a/new/index.html
+++ b/new/index.html
@@ -10,7 +10,7 @@
 <body>
     <link href="https://m.emsc.eu/" rel="stylesheet">
 <nav class="nav">
-  <a href="https://www.youtube.com/results?search_query=responsive+bottom+navigation+bar+bootstrap" class="nav__link">
+  <a href="https://m.emsc.eu/" class="nav__link">
     <i class="material-icons nav__icon">
       <img src="em.png" width="40px">
     </i>
@@ -19,11 +19,11 @@
     <i class="material-icons nav__icon"><img src="prot.png" width="50px">
     </i>
   </a>
-  <a href="#" class="nav__link">
+  <a href="https://m.emsc.eu/" class="nav__link">
     <i class="material-icons nav__icon">devices</i>
     <span class="nav__text">Devices</span>
   </a>
-  <a href="#" class="nav__link">
+  <a href="https://m.emsc.eu/" class="nav__link">
     <i class="material-icons nav__icon">lock</i>
     <span class="nav__text">Privacy</span>
   </a>
